@@ -207,7 +207,7 @@ skip_if_mocked("libphonenumber doesn't do operators", 1, sub {
   ok($number->operator() eq 'Hutchison 3G UK Ltd', "074 mobiles have right operator");
 });
 skip_if_mocked("libphonenumber disagrees with me about formatting mobile numbers", 1, sub {
-  is($number->format(), '+44 7400000000', "074 mobiles are formatted OK");
+  is($number->format(), '+44 7400 000000', "074 mobiles are formatted OK");
 });
 $number = Number::Phone->new('+447500000000');
 ok($number->is_mobile(), "075 mobiles correctly identified");
@@ -215,7 +215,7 @@ skip_if_mocked("libphonenumber doesn't do operators", 1, sub {
   is($number->operator(), 'Vodafone Uk Ltd', "075 mobiles have right operator");
 });
 skip_if_mocked("libphonenumber disagrees with me about formatting mobile numbers", 1, sub {
-  is($number->format(), '+44 7500000000', "075 mobiles are formatted OK");
+  is($number->format(), '+44 7500 000000', "075 mobiles are formatted OK");
 });
 
 print "# bugfixes\n";
